# live-OHLCV-validation-system

./: .gitignore  CMakeLists.txt  README.md  dashboard.R  metrics.csv  part_1.md  part_2.md  part_3.md  part_4.md  part_5.md  plan.md
src/: ingestor.hpp  logger.hpp  main.cpp  ring_buffer.hpp  risk_manager.hpp  types.hpp  validator.hpp
